--- a/res/template/index.html
+++ b/res/template/index.html
@@ -23,7 +23,7 @@
                 <label>Recherche</label>
             </div>
             <div class="pro">
-                <a href="#" class="ripple myButton" data-ripple-color="#f2c63b">Ridchardson pro</a>
+                <a href="#" class="ripple myButton">Ridchardson pro</a>
             </div>
         </div>
     </div>
