--- a/res/scss/style.scss
+++ b/res/scss/style.scss
@@ -14,6 +14,7 @@
 @import "bootstrap/buttons";
 // Components
 @import "bootstrap/component-animations";
+@import "bootstrap/carousel";
 @import "bootstrap/dropdowns";
 @import "bootstrap/button-groups";
 @import "bootstrap/input-groups";
@@ -27,9 +28,10 @@
 @import "bootstrap/utilities";
 @import "bootstrap/responsive-utilities";
 // FIN BOOTSTRAP
+@import "font-awesome";
 @import "variables";
 @import "flex";
 @import "inputs";
 @import "buttons";
 @import "body";
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900')
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900');
