--- a/res/template/index.html
+++ b/res/template/index.html
@@ -5,7 +5,7 @@
 
 {% block body %}
 <div class="wrapper">
-    <div class="row row-header">
+    <section class="row row-header">
         <div class="col-md-8 flex">
             <img src="img/logo.png" width="274" height="40"/>
             <ul class="menu-top">
@@ -26,56 +26,126 @@
                 <a href="#" class="ripple myButton">Ridchardson pro</a>
             </div>
         </div>
-    </div>
-    <div class="row deco">
+    </section>
+    <section class="row content-nav">
+        <div class="col-md-12 flex">
+            <ul>
+                <li><a href="#">La marque</a></li>
+                <li><a href="#">Salle de bain et bien-être</a></li>
+                <li><a href="#">Chauffage & climatisation</a></li>
+                <li><a href="#">Tendances & collections</a></li>
+            </ul>
+            <a href="#" class="side-pro">
+                Je suis un professionnel
+            </a>
+        </div>
+    </section>
+    <section class="row deco">
         <div class="col-md-8 col-xs-12 slider-main">
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                </ol>
+
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+                        <img src="img/slider-01.png" alt="Chania">
+                        <div>
+                            <h1>Vous avez un projet</h1>
+                            <h2>de rénovation ou de création de salle de bains</h2>
+                            <p class="intro">
+                                Faites de vos envies un vrai projet en vous inspirant de nos tendances et de nos collections...
+                            </p>
+                            <i class="fa fa-long-arrow-right pull-right" aria-hidden="true"></i>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <img src="img/slider-02.png" alt="Chania">
+                        <div>
+                            <h1>Vous avez un autre projet</h1>
+                            <h2>de rénovation ou de création de salle de bains</h2>
+                            <p class="intro">
+                                Faites de vos envies un vrai projet en vous inspirant de nos tendances et de nos collections...
+                            </p>
+                            <i class="fa fa-long-arrow-right pull-right" aria-hidden="true"></i>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <img src="img/slider-03.png" alt="Chania">
+                        <div>
+                            <h1>Vous avez encore un projet</h1>
+                            <h2>de rénovation ou de création de salle de bains</h2>
+                            <p class="intro">
+                                Faites de vos envies un vrai projet en vous inspirant de nos tendances et de nos collections...
+                            </p>
+                            <i class="fa fa-long-arrow-right pull-right" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Left and right controls -->
+                <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                    <i class="fa fa-chevron-left" aria-hidden="true"></i>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
         </div>
         <div class="col-md-4 col-xs-12">
         </div>
-    </div>
-    <div class="row content-a">
+    </section>
+    <section class="row content-a">
         <div class="col-md-12">
         </div>
-    </div>
-    <div class="row content-b">
+    </section>
+    <section class="row content-b">
         <div class="col-md-4 col-xs-12">
         </div>
         <div class="col-md-4 col-xs-12">
         </div>
         <div class="col-md-4 col-xs-12">
         </div>
-    </div>
-    <div class="row content-c">
+    </section>
+    <section class="row content-c">
         <div class="col-md-12">
         </div>
-    </div>
-    <div class="row content-d">
+    </section>
+    <section class="row content-d">
         <div class="col-md-4 col-xs-12">
         </div>
         <div class="col-md-4 col-xs-12">
         </div>
         <div class="col-md-4 col-xs-12">
         </div>
-    </div>
-    <div class="row content-e">
+    </section>
+    <section class="row content-e">
         <div class="col-md-8 col-md-offset-2 col-xs-12">
         </div>
-    </div>
-    <div class="row content-f">
+    </section>
+    <section class="row content-f">
         <div class="col-md-4 col-xs-12">
         </div>
         <div class="col-md-4 col-xs-12">
         </div>
         <div class="col-md-4 col-xs-12">
         </div>
-    </div>
-    <div class="row footer">
+    </section>
+    <section class="row footer">
         <div class="col-md-6 col-xs-12">
         </div>
         <div class="col-md-4 col-xs-12">
         </div>
         <div class="col-md-2 col-xs-12">
         </div>
-    </div>
+    </section>
 </div>
 {% endblock %}
