--- a/res/scss/_body.scss
+++ b/res/scss/_body.scss
@@ -6,7 +6,7 @@ body {
   background: $bg_color;
   font-family: 'Roboto', sans-serif;
   color: $color1;
-  font-size: 14px;
+  font-size: 16px;
   margin: 0 5%;
 }
 
@@ -26,18 +26,19 @@ h1, h2, h3, h4 {
 }
 
 h1 {
-  font-size: 56px;
+  font-size: 3.5em;
   font-weight: 300;
+  margin-bottom: 16px;
 }
 
 h2 {
-  font-size: 32px;
+  font-size: 2em;
   font-weight: 100;
   margin-bottom: 16px;
 }
 
 p.intro {
-  font-size: 20px;
+  font-size: 1.25em;
 }
 
 .flex {
@@ -57,7 +58,7 @@ p.intro {
 
 .row-header {
   & .col-md-8 {
-    height: 112px;
+    height: 7em;
     & .menu-top {
       list-style: none;
       height: 100%;
@@ -97,7 +98,7 @@ p.intro {
     }
   }
   & .col-md-4 {
-    height: 112px;
+    height: 7em;
     & .myButton {
       background-color: #edba18;
     }
@@ -129,10 +130,10 @@ p.intro {
   background-color: $color3;
   color: $color2;
   padding: 0;
-  height: 64px;
+  height: 4em;
   & ul {
     list-style: none;
-    width: 66.67%;
+    width: 67%;
     height: 100%;
     @include flexbox;
     & li {
@@ -143,7 +144,7 @@ p.intro {
   }
   & .side-pro {
     height: 100%;
-    width: 33.33%;
+    width: 33%;
     background-color: $color4;
     padding: 21px 0 0 4%;
     box-shadow: inset 0px 0px 0px 100px rgba(10, 45, 57, 0);
@@ -154,7 +155,7 @@ p.intro {
   & a {
     display: block;
     height: 100%;
-    padding-top: 21px;
+    padding-top: 1.313em;
     box-shadow: inset 0px 0px 0px 100px rgba(84, 84, 84, 0);
     transition: 0.3s ease all;
     -moz-transition: 0.3s ease all;
@@ -166,24 +167,24 @@ p.intro {
 }
 
 section.deco {
-  margin-top: 16px;
+  margin-top: 1em;
+  & > .col-md-4 {
+    padding-right: 0;
+  }
 }
 
 .slider-main {
   padding: 0;
   & .carousel-inner {
     & .item {
-      & img {
-        min-width: 100%;
+      height: 55em;
+      background: url("img/slider-01.png") no-repeat center center;
+      background-size: cover;
+      &:nth-of-type(2) {
+        background-image: url("img/slider-02.png");
       }
-      & > div {
-        margin: -300px 0 0 10%;
-        position: absolute;
-        width: 80%;
-        color: $color2;
-        background-color: $color3;
-        padding: 16px 50px;
-        font-weight: 300;
+      &:nth-of-type(3) {
+        background-image: url("img/slider-03.png");
       }
     }
   }
@@ -195,10 +196,51 @@ section.deco {
     transition: 0.3s ease all;
     -moz-transition: 0.3s ease all;
     -webkit-transition: 0.3s ease all;
+    background-image: none !important;
     & i {
       position: absolute;
       top: 50%;
+
     }
   }
+}
 
+.encart {
+  display: block;
+  bottom: 10%;
+  left: 10%;
+  position: absolute;
+  width: 80%;
+  color: $color2;
+  background-color: $color3;
+  padding: 16px 10% 16px 50px;
+  font-weight: 300;
+  &:hover, &:focus, &:active {
+    color: $color2;
+    & i {
+      transform: translateX(16px);
+    }
+  }
+  & > i {
+    position: absolute;
+    font-size: 20px;
+    right: 24px;
+    bottom: 24px;
+    cursor: pointer;
+    transition: 0.3s ease all;
+    -moz-transition: 0.3s ease all;
+    -webkit-transition: 0.3s ease all;
+  }
+}
+
+.card-pro {
+  height: 55em;
+  background: url("img/pro-01.png") no-repeat center center;
+  background-size: cover;
+  .encart-pro {
+    background-color: $color4;
+  }
+  & img {
+    width: 100%;
+  }
 }
