--- a/res/template/index.html
+++ b/res/template/index.html
@@ -53,39 +53,38 @@
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner" role="listbox">
                     <div class="item active">
-                        <img src="img/slider-01.png" alt="Chania">
-                        <div>
+                        <a href="#" class="encart">
                             <h1>Vous avez un projet</h1>
                             <h2>de rénovation ou de création de salle de bains</h2>
                             <p class="intro">
-                                Faites de vos envies un vrai projet en vous inspirant de nos tendances et de nos collections...
+                                Faites de vos envies un vrai projet en vous inspirant de nos tendances et de nos
+                                collections...
                             </p>
-                            <i class="fa fa-long-arrow-right pull-right" aria-hidden="true"></i>
-                        </div>
+                                <i class="fa fa-long-arrow-right pull-right" aria-hidden="true"></i>
+                        </a>
                     </div>
 
                     <div class="item">
-                        <img src="img/slider-02.png" alt="Chania">
-                        <div>
+                        <a href="#" class="encart">
                             <h1>Vous avez un autre projet</h1>
                             <h2>de rénovation ou de création de salle de bains</h2>
                             <p class="intro">
-                                Faites de vos envies un vrai projet en vous inspirant de nos tendances et de nos collections...
-                            </p>
-                            <i class="fa fa-long-arrow-right pull-right" aria-hidden="true"></i>
-                        </div>
+                                Faites de vos envies un vrai projet en vous inspirant de nos tendances et de nos
+                                collections...</p>
+                                    <i class="fa fa-long-arrow-right pull-right" aria-hidden="true"></i>
+                        </a>
                     </div>
 
                     <div class="item">
-                        <img src="img/slider-03.png" alt="Chania">
-                        <div>
+                        <a href="#" class="encart">
                             <h1>Vous avez encore un projet</h1>
                             <h2>de rénovation ou de création de salle de bains</h2>
                             <p class="intro">
-                                Faites de vos envies un vrai projet en vous inspirant de nos tendances et de nos collections...
+                                Faites de vos envies un vrai projet en vous inspirant de nos tendances et de nos
+                                collections...
                             </p>
-                            <i class="fa fa-long-arrow-right pull-right" aria-hidden="true"></i>
-                        </div>
+                                <i class="fa fa-long-arrow-right pull-right" aria-hidden="true"></i>
+                        </a>
                     </div>
                 </div>
 
@@ -101,6 +100,16 @@
             </div>
         </div>
         <div class="col-md-4 col-xs-12">
+            <div class="card-pro">
+                <a href="#" class="encart encart-pro">
+                    <h2>Vous êtes un</h2>
+                    <h1>Professionnel</h1>
+                    <p class="intro">
+                        Consultez librement notre catalogue de plus de 10 000 produits, nos services...
+                    </p>
+                        <i class="fa fa-long-arrow-right pull-right" aria-hidden="true"></i>
+                </a>
+            </div>
         </div>
     </section>
     <section class="row content-a">
