--- a/res/scss/style.scss
+++ b/res/scss/style.scss
@@ -35,3 +35,4 @@
 @import "buttons";
 @import "body";
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900');
+//@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700');
