--- a/res/template/index.html
+++ b/res/template/index.html
@@ -60,7 +60,7 @@
                                 Faites de vos envies un vrai projet en vous inspirant de nos tendances et de nos
                                 collections...
                             </p>
-                                <i class="fa fa-long-arrow-right pull-right" aria-hidden="true"></i>
+                            <i class="fa fa-long-arrow-right pull-right" aria-hidden="true"></i>
                         </a>
                     </div>
 
@@ -71,7 +71,7 @@
                             <p class="intro">
                                 Faites de vos envies un vrai projet en vous inspirant de nos tendances et de nos
                                 collections...</p>
-                                    <i class="fa fa-long-arrow-right pull-right" aria-hidden="true"></i>
+                            <i class="fa fa-long-arrow-right pull-right" aria-hidden="true"></i>
                         </a>
                     </div>
 
@@ -83,7 +83,7 @@
                                 Faites de vos envies un vrai projet en vous inspirant de nos tendances et de nos
                                 collections...
                             </p>
-                                <i class="fa fa-long-arrow-right pull-right" aria-hidden="true"></i>
+                            <i class="fa fa-long-arrow-right pull-right" aria-hidden="true"></i>
                         </a>
                     </div>
                 </div>
@@ -107,33 +107,204 @@
                     <p class="intro">
                         Consultez librement notre catalogue de plus de 10 000 produits, nos services...
                     </p>
-                        <i class="fa fa-long-arrow-right pull-right" aria-hidden="true"></i>
+                    <i class="fa fa-long-arrow-right pull-right" aria-hidden="true"></i>
                 </a>
             </div>
         </div>
     </section>
     <section class="row content-a">
         <div class="col-md-12">
+            <img src="img/pic-01.png"/>
         </div>
     </section>
     <section class="row content-b">
-        <div class="col-md-4 col-xs-12">
-        </div>
-        <div class="col-md-4 col-xs-12">
-        </div>
-        <div class="col-md-4 col-xs-12">
+        <div class="col-md-12">
+            <div id="mySecondCarousel" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <a href="#" class="circle">
+                    <div class="circle-content">
+                        <p class="circle-title">Laissez-vous inspirer</p>
+                        <ol class="carousel-indicators">
+                            <li data-target="#mySecondCarousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#mySecondCarousel" data-slide-to="1"></li>
+                            <li data-target="#mySecondCarousel" data-slide-to="2"></li>
+                        </ol>
+                        <p class="circle-text">Toutes les tendances<br/>& collections <i
+                                class="fa fa-long-arrow-right pull-right"
+                                aria-hidden="true"></i></p>
+                    </div>
+                </a>
+
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+                        <div class="flex">
+                            <div>
+                                <img src="img/slider-04.png"/>
+                                <a href="#">Tendance vintage <i class="fa fa-long-arrow-right pull-right"
+                                                                aria-hidden="true"></i></a>
+                            </div>
+                            <div>
+                                <img src="img/slider-05.png"/>
+                                <a href="#">Tendance rétro <i class="fa fa-long-arrow-right pull-right"
+                                                              aria-hidden="true"></i></a>
+                            </div>
+                            <div>
+                                <img src="img/slider-06.png"/>
+                                <a href="#">Tendance designed by <i class="fa fa-long-arrow-right pull-right"
+                                                                    aria-hidden="true"></i></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div class="flex">
+                            <div>
+                                <img src="img/slider-06.png"/>
+                                <a href="#">Tendance lorem <i class="fa fa-long-arrow-right pull-right"
+                                                              aria-hidden="true"></i></a>
+                            </div>
+                            <div>
+                                <img src="img/slider-04.png"/>
+                                <a href="#">Tendance Ipsum <i class="fa fa-long-arrow-right pull-right"
+                                                              aria-hidden="true"></i></a>
+                            </div>
+                            <div>
+                                <img src="img/slider-05.png"/>
+                                <a href="#">Tendance Dolor <i class="fa fa-long-arrow-right pull-right"
+                                                              aria-hidden="true"></i></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div class="flex">
+                            <div>
+                                <img src="img/slider-05.png"/>
+                                <a href="#">Tendance sit <i class="fa fa-long-arrow-right pull-right"
+                                                            aria-hidden="true"></i></a>
+                            </div>
+                            <div>
+                                <img src="img/slider-06.png"/>
+                                <a href="#">Tendance amet <i class="fa fa-long-arrow-right pull-right"
+                                                             aria-hidden="true"></i></a>
+                            </div>
+                            <div>
+                                <img src="img/slider-04.png"/>
+                                <a href="#">Tendance consegur <i class="fa fa-long-arrow-right pull-right"
+                                                                 aria-hidden="true"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Left and right controls -->
+                <a class="left carousel-control" href="#mySecondCarousel" role="button" data-slide="prev">
+                    <i class="fa fa-chevron-left" aria-hidden="true"></i>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#mySecondCarousel" role="button" data-slide="next">
+                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
         </div>
     </section>
     <section class="row content-c">
         <div class="col-md-12">
+            <img src="img/pic-02.png"/>
         </div>
     </section>
     <section class="row content-d">
-        <div class="col-md-4 col-xs-12">
-        </div>
-        <div class="col-md-4 col-xs-12">
-        </div>
-        <div class="col-md-4 col-xs-12">
+        <div class="col-md-12">
+            <div id="myThirdCarousel" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <a href="#" class="circle">
+                    <div class="circle-content">
+                        <p class="circle-title">Laissez-vous<br />guider</p>
+                        <ol class="carousel-indicators">
+                            <li data-target="#myThirdCarousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#myThirdCarousel" data-slide-to="1"></li>
+                            <li data-target="#myThirdCarousel" data-slide-to="2"></li>
+                        </ol>
+                        <p class="circle-text">Tous les guides <i class="fa fa-long-arrow-right pull-right"
+                                                                  aria-hidden="true"></i></p>
+                    </div>
+                </a>
+
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+                        <div class="flex">
+                            <div>
+                                <img src="img/slider-07.png"/>
+                                <a href="#">Bien choisir sa paroi de douche <i class="fa fa-long-arrow-right pull-right"
+                                                                               aria-hidden="true"></i></a>
+                            </div>
+                            <div>
+                                <img src="img/slider-08.png"/>
+                                <a href="#">Vasque avec ou sans meuble <i class="fa fa-long-arrow-right pull-right"
+                                                                          aria-hidden="true"></i></a>
+                            </div>
+                            <div>
+                                <img src="img/slider-09.png"/>
+                                <a href="#">Bien choisir son carrelage <i class="fa fa-long-arrow-right pull-right"
+                                                                          aria-hidden="true"></i></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div class="flex">
+                            <div>
+                                <img src="img/slider-09.png"/>
+                                <a href="#">Lorem Ipsum <i class="fa fa-long-arrow-right pull-right"
+                                                           aria-hidden="true"></i></a>
+                            </div>
+                            <div>
+                                <img src="img/slider-07.png"/>
+                                <a href="#">Dolor sit amet <i class="fa fa-long-arrow-right pull-right"
+                                                              aria-hidden="true"></i></a>
+                            </div>
+                            <div>
+                                <img src="img/slider-08.png"/>
+                                <a href="#">consectetur adipiscing <i class="fa fa-long-arrow-right pull-right"
+                                                                      aria-hidden="true"></i></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div class="flex">
+                            <div>
+                                <img src="img/slider-08.png"/>
+                                <a href="#">Tendance sit <i class="fa fa-long-arrow-right pull-right"
+                                                            aria-hidden="true"></i></a>
+                            </div>
+                            <div>
+                                <img src="img/slider-09.png"/>
+                                <a href="#">Integer consectetur <i class="fa fa-long-arrow-right pull-right"
+                                                                   aria-hidden="true"></i></a>
+                            </div>
+                            <div>
+                                <img src="img/slider-07.png"/>
+                                <a href="#">purus nulla <i class="fa fa-long-arrow-right pull-right"
+                                                           aria-hidden="true"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Left and right controls -->
+                <a class="left carousel-control" href="#myThirdCarousel" role="button" data-slide="prev">
+                    <i class="fa fa-chevron-left" aria-hidden="true"></i>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#myThirdCarousel" role="button" data-slide="next">
+                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
         </div>
     </section>
     <section class="row content-e">
