--- a/res/scss/style.scss
+++ b/res/scss/style.scss
@@ -30,6 +30,7 @@
 // FIN BOOTSTRAP
 @import "font-awesome";
 @import "variables";
+@import "pace";
 @import "flex";
 @import "inputs";
 @import "buttons";
