--- a/res/template/index.html
+++ b/res/template/index.html
@@ -1,5 +1,5 @@
 {% extends "includes/base.html" %}
-{% block title %}Portail d'achat réseaux{% endblock %}
+{% block title %}/!\ DEMO POUR KEYRUS ---- Richardson{% endblock %}
 {% block description %}void{% endblock %}
 
 
@@ -121,7 +121,7 @@
         <div class="col-md-12">
             <div id="mySecondCarousel" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
-                <a href="#" class="circle">
+                <div class="circle">
                     <div class="circle-content">
                         <p class="circle-title">Laissez-vous inspirer</p>
                         <ol class="carousel-indicators">
@@ -129,11 +129,11 @@
                             <li data-target="#mySecondCarousel" data-slide-to="1"></li>
                             <li data-target="#mySecondCarousel" data-slide-to="2"></li>
                         </ol>
-                        <p class="circle-text">Toutes les tendances<br/>& collections <i
-                                class="fa fa-long-arrow-right pull-right"
-                                aria-hidden="true"></i></p>
+                        <a href="#" class="circle-text">Toutes les tendances<br/>& collections <i
+                                class="fa fa-long-arrow-right"
+                                aria-hidden="true"></i></a>
                     </div>
-                </a>
+                </div>
 
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner" role="listbox">
@@ -219,18 +219,18 @@
         <div class="col-md-12">
             <div id="myThirdCarousel" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
-                <a href="#" class="circle">
+                <div class="circle">
                     <div class="circle-content">
-                        <p class="circle-title">Laissez-vous<br />guider</p>
+                        <p class="circle-title">Laissez-vous<br/>guider</p>
                         <ol class="carousel-indicators">
                             <li data-target="#myThirdCarousel" data-slide-to="0" class="active"></li>
                             <li data-target="#myThirdCarousel" data-slide-to="1"></li>
                             <li data-target="#myThirdCarousel" data-slide-to="2"></li>
                         </ol>
-                        <p class="circle-text">Tous les guides <i class="fa fa-long-arrow-right pull-right"
-                                                                  aria-hidden="true"></i></p>
+                        <a href="#" class="circle-text">Tous les guides <i class="fa fa-long-arrow-right"
+                                                                           aria-hidden="true"></i></a>
                     </div>
-                </a>
+                </div>
 
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner" role="listbox">
@@ -309,14 +309,28 @@
     </section>
     <section class="row content-e">
         <div class="col-md-8 col-md-offset-2 col-xs-12">
+            <p>Vous avez un projet ?</p>
         </div>
     </section>
     <section class="row content-f">
-        <div class="col-md-4 col-xs-12">
-        </div>
-        <div class="col-md-4 col-xs-12">
-        </div>
-        <div class="col-md-4 col-xs-12">
+        <div class="col-md-12">
+            <div class="flex">
+                <div>
+                    <img src="img/pic-03.png"/>
+                    <a href="#">Tendance sit <i class="fa fa-long-arrow-right pull-right"
+                                                aria-hidden="true"></i></a>
+                </div>
+                <div>
+                    <img src="img/pic-04.png"/>
+                    <a href="#">Integer consectetur <i class="fa fa-long-arrow-right pull-right"
+                                                       aria-hidden="true"></i></a>
+                </div>
+                <div>
+                    <img src="img/pic-05.png"/>
+                    <a href="#">purus nulla <i class="fa fa-long-arrow-right pull-right"
+                                               aria-hidden="true"></i></a>
+                </div>
+            </div>
         </div>
     </section>
     <section class="row footer">
