--- a/res/template/index.html
+++ b/res/template/index.html
@@ -317,17 +317,17 @@
             <div class="flex">
                 <div>
                     <img src="img/pic-03.png"/>
-                    <a href="#">Tendance sit <i class="fa fa-long-arrow-right pull-right"
+                    <a href="#">Préparez votre projet <i class="fa fa-long-arrow-right pull-right"
                                                 aria-hidden="true"></i></a>
                 </div>
                 <div>
                     <img src="img/pic-04.png"/>
-                    <a href="#">Integer consectetur <i class="fa fa-long-arrow-right pull-right"
+                    <a href="#">Trouvez le magasin le plus proche <i class="fa fa-long-arrow-right pull-right"
                                                        aria-hidden="true"></i></a>
                 </div>
                 <div>
                     <img src="img/pic-05.png"/>
-                    <a href="#">purus nulla <i class="fa fa-long-arrow-right pull-right"
+                    <a href="#">Rencontrez un conseiller <i class="fa fa-long-arrow-right pull-right"
                                                aria-hidden="true"></i></a>
                 </div>
             </div>
