--- a/res/template/includes/header.html
+++ b/res/template/includes/header.html
@@ -1,4 +1,4 @@
-<section class="row row-header">
+<section class="row row-header flex">
     <div class="col-md-8 flex">
         <img src="img/logo.png"/>
         <ul class="menu-top">
